StashPP post processor

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = yt-dlp-sample-plugins
-version = 2023.01.01
+name = yt-dlp-stash
+version = 1.0.0
 
 [options]
 packages = find_namespace:
