--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,11 @@
 [project]
 name = "yt-dlp-stash"
-version = "1.2.0"
+version = "2.0.0"
 readme = "README.md"
-authors = [
-  { name="Schmoaaaaah", email="schmoaaaaah@r4nd0.com" },
-]
-license = {file = "LICENSE"}
+authors = [{ name = "Schmoaaaaah", email = "schmoaaaaah@r4nd0.com" }]
+license = { file = "LICENSE" }
 requires-python = ">= 3.11"
-dependencies = [
-  "yt-dlp>=2024.7.9",
-  "stashapp-tools==0.2.46"
-]
+dependencies = ["yt-dlp>=2025.03.31", "stashapp-tools>=0.2.58"]
 
 
 [build-system]
